--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html><html lang="es"><head>
-    <meta charset="utf-8">
-    <title>Etiquetado Web</title>
-    <base href="/FarmatodoEtiquetado/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <!-- <link href="assets/feather-icons/feather.css" rel="stylesheet" type="text/css"> -->
-    <!-- Descargar estas depedencias de los font icons de Google para evitar el uso de Internet al cargar el proyecto -->
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/> -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
+    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+<div style="width: 900px" id="reader"></div>
+<button id="sound">Sound ON (iOS)</button>
+<div id="result"></dib>
 
-   <style>body{padding-top:0;background-color:#e2e2e2}@media (min-width: 979px){body{padding-top:0%}}html,body{height:100%}body{margin:0;font-family:Roboto,Helvetica Neue,sans-serif}</style><link rel="stylesheet" href="styles.f7b7bc05860f007b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f7b7bc05860f007b.css"></noscript></head>
-   <body>
-     <app-root></app-root>
-   <script src="runtime.beb7d91664846549.js" type="module"></script><script src="polyfills.c839b50aae4278fe.js" type="module"></script><script src="scripts.bd7b71cfa18723d9.js" defer></script><script src="main.227b5717c761b182.js" type="module"></script>
- 
-</body></html>
+    <script type="module" src="script.js"></script>
+  </body>
+</html>
